--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,28 @@
 project(vgmConv)
 cmake_minimum_required(VERSION 3.16)
+set( EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
+set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
-set( EXECUTABLE_OUTPUT_PATH ../bin)
-set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ../bin)
-set( CMAKE_STATIC_LIBRARY_PREFIX "")
-add_link_options(-s -Wl,--gc-sections)
+# linker flags
+if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+	if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+		add_link_options(-s -Wl,--gc-sections)	
+	endif()
+endif()
 
+# unicode build flags
+if (WIN32)
+	add_link_options(-municode)
+endif()
+
+# compile flags
+add_compile_options(-std=gnu++11)
+
+# warnings
+add_compile_options(-Wno-delete-non-virtual-dtor)
+add_compile_options(-Wno-invalid-source-encoding)
+
+# source files
 include_directories(lib .)
 file(GLOB LIB_SRC lib/*.cpp src/*.cpp src/vgx/*.cpp src/codec/*.cpp)
 file(GLOB APP_SRC src/app/*.cpp)
